# ros2-semantic-contracts

./: .dockerignore  .gitignore  .lychee.toml  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  docker-compose.yml  matrix_output.txt  matrix_output_final.txt  matrix_output_v2.txt  matrix_output_v3.txt  matrix_output_v4.txt
.github/workflows/: baseline-lock.yml  h00-baseline.yml  harness-validation.yml  linkcheck.yml  provenance-gate.yml
docker/: Dockerfile.harness
docs/: CONTEXT.md  PROBE_P04_NOTE.md  intent.md  methodology.md  philosophy.md  spec_scenario_remediation.md
docs/_work/: LESSONS_LEARNED.md  TODO.md  backend_coverage_matrix.md  oracle_naming_rules.md  spec_inventory.md  traceability.md
docs/harness/: RELIABILITY_RULES.md
docs/provenance/: README.md  missing_semantics.md  oracle_baseline.md
docs/provenance/divergence_records/: README.md
docs/provenance/oracle/: boundaries.md  oracle_baseline.md  oracle_measurement.md  oracle_naming_rules.md  oracle_plan.md
docs/provenance/reports/: README.md  backend_ros_next_scenarios.md  provenance_gate_contract.md
docs/provenance/scenario/: scenario_execution_matrix.md  semantics_A.md  semantics_G.md  semantics_H.md  semantics_L.md  semantics_P.md  semantics_S.md  semantics_archive.md
docs/scratch/: TODO.md
docs/spec/: README.md  action.md  lifecycle.md  parameters.md
docs/spec/core/: action_core.md  lifecycle_core.md  parameter_core.md
docs/spec/global/: action.md  lifecycle.md  parameters.md
docs/spec/system/: composition.md  ecosystem.md  executor.md  system_contract.md
docs/workbench/: traceability.md
evidence/: README.md  aggregate.json  aggregate.md  reliability_report.md  report.json
evidence/_reports/2026-02-01/: backend_ros_smoke_set_2026-02-01.md  backend_ros_suitability_2026-02-01.md  traceability_audit_2026-02-01.md
evidence/audit/: claude_audit_report.md  codex_audit_report.md  local_gemini_audit_report.md
evidence/humble/prod/L05/run_5/: report.json
evidence/humble/prod/P04/run_1/: report.json
evidence/humble/prod/S11/run_4/: report.json
evidence/jazzy/rclpy/L05/run_2/: report.json
evidence/jazzy/rclpy/S11/run_4/: report.json
harness/: CMakeLists.txt  README.md  run_harness.sh
harness/backends/backend_prod/: CMakeLists.txt  README.md  package.xml
harness/backends/backend_prod/actors/: action_server.cpp
harness/backends/backend_prod/include/backend_prod/: backend.hpp
harness/backends/backend_prod/peer/: reject_always.cpp  sequence.cpp
harness/backends/backend_prod/src/: backend.cpp  backend.hpp  header_sanity.cpp  main.cpp
harness/backends/backend_prod/src/internal/: bundle_parser.cpp  bundle_parser.hpp  errors.hpp  fs_utils.cpp  fs_utils.hpp  types.hpp
harness/backends/backend_prod/src/ops/: actions.cpp  clock.cpp  generic.cpp  lifecycle.cpp  params.cpp
harness/backends/backend_prod/src/runtime/: actor_ops.cpp
harness/backends/backend_prod/src/utils/: trace.cpp  trace.hpp
harness/backends/backend_rclpy/: README.md  backend_rclpy  backend_rclpy.py  trace_writer.py
harness/backends/backend_rclpy/ops/: lifecycle.py  params.py
harness/backends/backend_ros/: Cargo.toml
harness/backends/backend_ros/src/: bundle.rs  error.rs  io.rs  main.rs  ops.rs  state.rs
harness/backends/backend_stub/: Cargo.toml
harness/backends/backend_stub/src/: main.rs
harness/configs/: scenarios.A2.json  scenarios.example.json  scenarios.schema.json  scenarios_a.json
harness/contracts/: backend_contract.md  rebuild_plan.md  scenario_execution_matrix.json  stub_backend.md
harness/core/: Cargo.toml
harness/core/src/: error.rs  eval.rs  io.rs  main.rs  model.rs  report.rs
harness/include/oracle/: ros_backend.hpp
harness/scenarios/: scenarios_A.json  scenarios_G.json  scenarios_H.json  scenarios_L.json  scenarios_P.json  scenarios_S.json
harness/scenarios/probes/: scenarios_L05.json  scenarios_P04.json  scenarios_S11.json
harness/schemas/: scenario.schema.json  trace_event.schema.json
harness/scripts/: launch_peer.sh  run_harness.sh  validate_bundles.py
harness/src/: audit_trace.cpp  oracle_a.cpp  oracle_a_ros.cpp  oracle_core.cpp  ros_backend.cpp
harness_legacy/: CMakeLists.txt
harness_legacy/configs/: scenarios_a.json  trace.schema.json
harness_legacy/contracts/: backend_contract.md
harness_legacy/include/oracle/: oracle_core.hpp  ros_backend.hpp  trace_writer.hpp  util.hpp
harness_legacy/src/: oracle_a.cpp  oracle_a_ros.cpp  oracle_core.cpp  ros_backend.cpp  ros_backend.hpp
reference/ros2_semantics_core/: Cargo.toml  README.md
reference/ros2_semantics_core/src/: error.rs  lib.rs
reference/ros2_semantics_core/src/action/: engine.rs  error.rs  events.rs  mod.rs  policy.rs  state.rs  transition.rs
reference/ros2_semantics_core/src/lifecycle/: engine.rs  machine.rs  mod.rs  state.rs  transition.rs
reference/ros2_semantics_core/src/parameters/: mod.rs  store.rs  types.rs
reference/ros2_semantics_core/src/support/: gate.rs  mod.rs
reference/ros2_semantics_core/tests/: action_contracts.rs  lifecycle_contracts.rs  parameter_contracts.rs  support_contracts.rs
scripts/: aggregate_results.py  run_probe_matrix.sh  run_reliability.sh  verify_reliability.sh
tools/: README.md
tools/analysis/: aggregate_results.py
tools/ci/: provenance_gate.py
tools/testing/: run_reliability.sh
