<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>backend_prod</name>
  <version>0.0.1</version>
  <description>Production backend for ROS 2 Semantic Contracts (H00 baseline)</description>
  <maintainer email="stub@example.com">ECM</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>test_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
